tests/NormalTests/paczka1/small_fuzzy/76193261.err
Error in line 1: S1 S271 63,8
Error in line 4: S1 S271 115,5
Error in line 5: gaJgAiJCHk0 A54 83,0
Error in line 8: S1 S1 69,1
Error in line 12: S1 S504 75,1
Error in line 6: gaJgAiJCHk0 S504 4,6
Error in line 14: RObBRd8M S1 67,4
